# avs

./: .gitignore  CMakeLists.txt  README.md  build.bat  buildlog.txt  context.txt
benchmarks/: CMakeLists.txt  job_bench.cpp
src/: CMakeLists.txt
src/adapters/: ARCHITECTURE.md  CMakeLists.txt
src/adapters/abb/: CMakeLists.txt
src/adapters/abb/include/avs/adapters/abb/: abb_client.hpp
src/adapters/abb/src/: abb_client.cpp
src/adapters/creaform/: CMakeLists.txt
src/adapters/creaform/include/avs/adapters/creaform/: CreaformAdapter.h
src/adapters/creaform/src/: CreaformAdapter.cpp
src/adapters/include/avs/adapters/: abb_stub.h  creaform_stub.h  open3d_stub.h  opencv_stub.h  photoneo_stub.h  realsense_stub.h
src/adapters/open3d/: CMakeLists.txt
src/adapters/open3d/include/: Convert.hpp
src/adapters/open3d/include/avs/adapters/open3d/: Open3DAdapter.hpp
src/adapters/open3d/src/: Convert.cpp  Open3DAdapter.cpp
src/adapters/opencv/: CMakeLists.txt
src/adapters/opencv/include/avs/adapters/opencv/: OpenCVAdapter.hpp
src/adapters/opencv/src/: OpenCVAdapter.cpp
src/adapters/photoneo/: CMakeLists.txt
src/adapters/photoneo/include/adapters/photoneo/: PhoxiDevice.h
src/adapters/photoneo/src/: PhoxiDevice.cpp
src/adapters/realsense/: CMakeLists.txt
src/adapters/realsense/include/avs/adapters/realsense/: RealSenseDeviceManager.hpp  RealSenseFrameGrabber.hpp  RealSenseTypes.hpp
src/adapters/realsense/src/: RealSenseDeviceManager.cpp  RealSenseFrameGrabber.cpp
src/app/: CMakeLists.txt  avs_app.cpp  main.cpp
src/app/src/: main.cpp  plugin_bootstrap.cpp
src/core/: CMakeLists.txt
src/core/include/avs/core/: export.hpp  log.hpp  logger.h  logging.hpp  result.hpp  telemetry.hpp  types.h  version.hpp
src/core/src/: log.cpp  logger.cpp  logging.cpp  telemetry.cpp
src/graph/: CMakeLists.txt  graph.md
src/graph/include/avs/graph/: executor.hpp  graph.hpp  node.hpp  registry.hpp  registry_runtime.hpp  serialization.hpp  types.hpp
src/graph/src/: executor.cpp  graph.cpp  node.cpp  registry.cpp  registry_runtime.cpp  serialization.cpp
src/gui/: ARCHITECTURE.md  CMakeLists.txt
src/gui/include/avs/gui/: GraphEditor.h  GuiFactory.h  IGui.h  metrics_panel.hpp
src/gui/src/: metrics_panel.cpp
src/gui/src/gui/: GuiFactory.cpp
src/gui/src/gui/imgui/: ImGuiGraphEditor.cpp  ImGuiGraphEditor.h  ImGuiGui.cpp  ImGuiGui.h
src/gui/view3d/: CMakeLists.txt
src/gui/view3d/include/: Viewer3D.hpp
src/gui/view3d/src/: Viewer3DNull.cpp  Viewer3DOpen3D.cpp
src/modules/calibration/: CMakeLists.txt
src/modules/calibration/include/calibration/: extrinsics.hpp  hand_eye.hpp  types.hpp
src/modules/calibration/src/: extrinsics.cpp  hand_eye.cpp
src/modules/safety/: CMakeLists.txt
src/modules/safety/include/avs/safety/: ISafetyBackend.hpp  SafetyContext.hpp  SafetyManager.hpp  SafetyState.hpp
src/modules/safety/include/avs/safety/backends/: SimBackend.hpp
src/modules/safety/src/: SafetyManager.cpp
src/modules/safety/src/backends/: SimBackend.cpp
src/modules/safety/src/nodes/: EStopStatusNode.cpp
src/nodes/: ARCHITECTURE.md  CMakeLists.txt
src/nodes/calibration/: CMakeLists.txt
src/nodes/calibration/include/nodes/calibration/: hand_eye_node.hpp
src/nodes/calibration/src/calibration/: hand_eye_node.cpp  register_nodes.cpp
src/nodes/diagnostics/: CMakeLists.txt
src/nodes/diagnostics/src/: heartbeat_node.cpp
src/nodes/include/avs/nodes/: add_node.hpp  constant_node.hpp  math_nodes.hpp
src/nodes/inspection/: CMakeLists.txt
src/nodes/inspection/src/: BasicInspectionNodes.cpp  CreaformImportNode.cpp
src/nodes/ml/src/: dummy_infer.cpp
src/nodes/photoneo/: CMakeLists.txt
src/nodes/photoneo/include/nodes/photoneo/: PhoxiGrabNode.h
src/nodes/photoneo/src/: PhoxiGrabNode.cpp
src/nodes/pointcloud/: CMakeLists.txt
src/nodes/pointcloud/src/: ICPRegistrationNode.cpp  PlaneSegmentationNode.cpp  VoxelDownsampleNode.cpp  pass_through.cpp
src/nodes/realsense/: CMakeLists.txt
src/nodes/realsense/src/: RSColorNode.cpp  RSDepthNode.cpp
src/nodes/render/: CMakeLists.txt
src/nodes/render/include/: RenderPointCloudNode.hpp
src/nodes/render/src/: RenderPointCloudNode.cpp
src/nodes/robotics/: CMakeLists.txt
src/nodes/robotics/src/: abb_movej.cpp  abb_movel.cpp  abb_read_rapid.cpp  abb_write_rapid.cpp  movej.cpp
src/nodes/scripting/: CMakeLists.txt
src/nodes/scripting/include/avs/nodes/: PyScriptNode.h
src/nodes/scripting/src/: PyScriptNode.cpp
src/nodes/src/: add_node.cpp  constant_node.cpp  math_nodes.cpp
src/nodes/vision/: CMakeLists.txt
src/nodes/vision/src/: BlurNode.cpp  CannyNode.cpp  GrayscaleNode.cpp  RegisterVisionNodes.cpp  TemplateMatchNode.cpp  gray.cpp
src/plugins/: CMakeLists.txt
src/plugins/include/avs/plugin/: plugin_api.hpp  plugin_loader.hpp
src/plugins/packs/sample_nodes/: CMakeLists.txt  sample_nodes.cpp
src/plugins/src/: plugin_loader.cpp
src/runtime/: CMakeLists.txt
src/runtime/include/avs/runtime/: HeadlessExecutor.h  IControlServer.h  ServiceHost.h  job_system.hpp  lockfree_mpmc_queue.hpp  scheduler.h  scheduler.hpp  work_stealing_deque.hpp
src/runtime/include/avs/runtime/grpc/: GrpcServer.h
src/runtime/include/avs/runtime/rest/: RestServer.h
src/runtime/src/: HeadlessExecutor.cpp  ServiceHost.cpp  job_system.cpp
src/runtime/src/grpc/: GrpcServer.cpp
src/runtime/src/rest/: RestServer.cpp
src/scripting/: CMakeLists.txt
src/scripting/examples/scripts/: example_script.py
src/scripting/include/avs/scripting/: PyBindings.h  PyEngine.h  python_embed.h
src/scripting/src/: PyBindings.cpp  PyEngine.cpp  python_embed.cpp
src/templates/: CMakeLists.txt
src/templates/include/avs/templates/: bin_picking.hpp  depal.hpp  inspection.hpp  template_common.hpp
src/templates/src/: bin_picking.cpp  depal.cpp  inspection.cpp  template_common.cpp
src/util/: CMakeLists.txt
src/util/include/avs/util/: fs.h  fs.hpp  json.cpp  json.h  json.hpp  thread_pool.hpp
tests/: CMakeLists.txt  smoketest.cpp  test_graph_catch2.cpp  test_graph_gtest.cpp  test_nodes_catch2.cpp  test_nodes_gtest.cpp
(+41 files in other folders)
